example-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/hsts: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "example.linkbird.io"
      http:
        paths:
          - path: /instance-001/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-service
                port:
                  number: 80
  ingressClassName: nginx
